# crazy8

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  card.hpp  deck.hpp  game.cpp  game.hpp  hand.hpp  main.cpp  makefile  player.cpp  player.hpp  util.cpp  util.hpp
src/: CMakeLists.txt  README.md  card.hpp  deck.hpp  game.cpp  game.hpp  main.cpp  player.hpp  util.cpp  util.hpp
